--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello welcome to world of learning</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, tempore.</p>
 </body>
 </html>
