--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 <body>
     <h1>Hello welcome to world of learning</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, tempore.</p>
+    <ul>
+        <li>Java</li>
+        <li>Python<</li>
+        <li>C</li>
+        <li>C++</li>
+        <li>Kotlin</li>
+    </ul>
 </body>
 </html>
