added editora and changed heading

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Basic Web Page</title>
 </head>
 <body>
-    <h1>Hello welcome to world of learning</h1>
+    <h1>It's time to learn git pull</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, tempore.</p>
+    <ol>
+        <li>IntelliJ</li>
+        <li>Vscode</li>
+        <li>Eclipse</li>
+    </ol>
     <ul>
         <li>Java</li>
         <li>Python<</li>
